refactor: remove redundant comments and streamline logic in SystemCommandsCompleter